<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".controller.task.CreateTaskActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:id="@+id/textedit_task_name"
        android:hint="@string/taskname" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/textedit_task_name"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/locationlist"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_menu_manage"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/create_task_configure_ortsliste"
                    android:contentDescription="@string/none"/>

            </RelativeLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/create_task_ortsliste">
            </ListView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/actions"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:layout_centerVertical="true"
                    android:layout_alignParentStart="true" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_white_24dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/create_task_add_action"
                    android:contentDescription="@string/none"/>

            </RelativeLayout>

            <ListView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:id="@+id/create_task_actionliste">

            </ListView>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
